--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: AbstractMob
 author: Flowsqy
 version: "${project.version}"
 main: fr.flowsqy.abstractmob.AbstractMobPlugin
+api-version: "1.17"
