--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
             <groupId>com.github.Flowsqy</groupId>
             <artifactId>AbstractMenu</artifactId>
             <version>2.0.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
