--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-# Maven target folder
-/target/
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
